--- a/_posts/2014-08-08-about.md
+++ b/_posts/2014-08-08-about.md
@@ -20,7 +20,7 @@ keywords:
   - outsourcing programming
   - software general contracting
   - general contractor
-next: process/cost
+next_step: process/cost
 ---
 
 TechnoPark Corp. is a software development with an innovative approach to project management in
