--- a/_posts/2014-08-08-contacts.md
+++ b/_posts/2014-08-08-contacts.md
@@ -8,5 +8,5 @@ intro: "Contact us now instead of later"
 description: no description
 keywords:
   - software development
-next: about/why
+next_step: about/why
 ---
