--- a/_posts/2014-08-08-de.md
+++ b/_posts/2014-08-08-de.md
@@ -40,7 +40,7 @@ keywords:
   - web freelancer
   - web projektmanagement
   - web softwareentwicklung
-next: de/quality
+next_step: de/quality
 ---
 
 TechnoPark Corp. ist eine SoftwareVerwertungsgesellschaft mit einer erfinderischen Annäherung zum
