--- a/_posts/2014-08-08-process.md
+++ b/_posts/2014-08-08-process.md
@@ -20,7 +20,7 @@ keywords:
   - schedule
   - project cost
   - ROM
-next: process/scope
+next_step: process/scope
 ---
 
 We implement full-scale PMBOK-inspired project management and make its every last detail valuable
