--- a/_posts/2014-08-08-ru.md
+++ b/_posts/2014-08-08-ru.md
@@ -21,7 +21,7 @@ keywords:
   - программы
   - управление разработкой
   - проджект менеджмент
-next: process/scope
+next_step: process/scope
 ---
 
 Зачастую, удачный выбор разработчика программного продукта не является гарантией успеха в конкретном
