--- a/_posts/about/2014-08-08-facts.md
+++ b/_posts/about/2014-08-08-facts.md
@@ -17,11 +17,11 @@ keywords:
   - quality of software
   - quality of code
   - puzzle driven development
-next: about/history
+next_step: about/history
 ---
 
-TechnoPark Corp. is a custom software development company equipped with a unique proprietary 
-implementation of eXtremely Distributed Software Development ([XDSD](http://www.xdsd.org)), a unique 
+TechnoPark Corp. is a custom software development company equipped with a unique proprietary
+implementation of eXtremely Distributed Software Development ([XDSD](http://www.xdsd.org)), a unique
 project management methodology, provided through [teamed.io](http://www.teamed.io).
 
 Key facts about TechnoPark Corp.:
@@ -75,5 +75,5 @@ Key facts about TechnoPark Corp.:
             </td></tr>
     </table>
 
-[Contact us](/contacts) and we disclose more information: references, pricing, existing success 
+[Contact us](/contacts) and we disclose more information: references, pricing, existing success
 clients, etc.
