--- a/_posts/about/2014-08-08-history.md
+++ b/_posts/about/2014-08-08-history.md
@@ -15,7 +15,7 @@ keywords:
   - quality of software
   - respectful team
   - software development references
-next: about/executives
+next_step: about/executives
 ---
 
 We are doing custom software development since 2001, here is a list of key facts and events:
