--- a/_posts/about/2014-08-08-news.md
+++ b/_posts/about/2014-08-08-news.md
@@ -8,7 +8,7 @@ intro: "Read the latest news about TPC and the software industry"
 description: no description
 keywords:
   - software development
-next: about/facts
+next_step: about/facts
 ---
 
 The latest news about our company, events, conferences, and achievements:
