--- a/_posts/about/2014-08-08-teams.md
+++ b/_posts/about/2014-08-08-teams.md
@@ -12,17 +12,17 @@ keywords:
   - virtual team
   - offshore programmers
   - dedicated distributed team
-next: contacts/sup
+next_step: contacts/sup
 ---
 
-For each new project we build and manage a dedicated distributed team of narrow-skilled technicians. 
-Each role in a project is being filled by the best suitable talent ([tell us about your 
+For each new project we build and manage a dedicated distributed team of narrow-skilled technicians.
+Each role in a project is being filled by the best suitable talent ([tell us about your
 uniqueness](/contacts/sup) and we will invite you to one of our projects), the company or an individual.
 
-The project team includes individuals and companies' engineers from different countries across the 
-globe. With our project management toolkit you interact with documents, project manager and the team 
+The project team includes individuals and companies' engineers from different countries across the
+globe. With our project management toolkit you interact with documents, project manager and the team
 effectively and without redundant communications.
 
 
-Our typical projects require system analysts, software architects, software designers, programmers, 
+Our typical projects require system analysts, software architects, software designers, programmers,
 test analysts, testers, technical/management reviewers, graphic artists, and system administators.
