--- a/_posts/about/2014-08-08-why.md
+++ b/_posts/about/2014-08-08-why.md
@@ -19,11 +19,11 @@ keywords:
   - custom software development
   - offshore programming
   - outsourcing programming
-next: about/facts
+next_step: about/facts
 ---
 
-We are one of the authors of a new open methodology called . We are the only company who provides a 
-proprietary implementation of it, combining together tools, technologies, and talents. Application 
+We are one of the authors of a new open methodology called . We are the only company who provides a
+proprietary implementation of it, combining together tools, technologies, and talents. Application
 of XDSD in your project guarantees you:
 
  * No hidden costs due to the [fixed-price](/process/cost/budget)
