--- a/_posts/about/jobs/2014-08-08-CEO.md
+++ b/_posts/about/jobs/2014-08-08-CEO.md
@@ -8,12 +8,12 @@ intro: "Talented and experienced CEO wanted for our growing company"
 description: no description
 keywords:
   - software development
-next: about/jobs
+next_step: about/jobs
 ---
 
-TechnoPark Corp., an angel-funded Florida-based custom software development company, has an 
-opportunity for a Chief Executive Officer (CEO). This is a great position for a talented and 
-self-motivated individual, located in Naples, Florida (relocation sponsorship is negotiable). We pay 
+TechnoPark Corp., an angel-funded Florida-based custom software development company, has an
+opportunity for a Chief Executive Officer (CEO). This is a great position for a talented and
+self-motivated individual, located in Naples, Florida (relocation sponsorship is negotiable). We pay
 $120K salary, usual benefits, and a great cash + equity bonus on every successful milestone.
 
 Qualifications expected:
@@ -46,5 +46,5 @@ We expect you to be an expert in cutting edge software technologies, including:
  * Agile/Scrum/XP methodologies
  * Distributed Development
 
-Email directly to [HR Director](mailto:hr@technoparkcorp.com) to setup a phone interview. Please, 
+Email directly to [HR Director](mailto:hr@technoparkcorp.com) to setup a phone interview. Please,
 don't call us directly, just send your resume for review. We promise to reply to ALL emails. Thanks!
