--- a/_posts/about/jobs/2014-08-08-PM.md
+++ b/_posts/about/jobs/2014-08-08-PM.md
@@ -8,12 +8,12 @@ intro: "We need you as a full-time project manager for our projects"
 description: no description
 keywords:
   - software development
-next: about/jobs
+next_step: about/jobs
 ---
 
-TechnoPark Corp., an angel-funded Florida-based custom software development company, has an 
-opportunity for a full-time Project Manager. This is a great position for a talented and 
-self-motivated individual, located in Naples, Florida (relocation sponsorship is negotiable). We pay 
+TechnoPark Corp., an angel-funded Florida-based custom software development company, has an
+opportunity for a full-time Project Manager. This is a great position for a talented and
+self-motivated individual, located in Naples, Florida (relocation sponsorship is negotiable). We pay
 $90K salary, usual benefits, and a great cash bonus on every successful project.
 
 Qualifications expected:
@@ -25,5 +25,5 @@ Qualifications expected:
  * Excellent communication and presentation skills
  * Ability and willingness to travel 25% of time
 
-Email directly to [HR Director](mailto:hr@technoparkcorp.com) to setup a phone interview. Please, 
+Email directly to [HR Director](mailto:hr@technoparkcorp.com) to setup a phone interview. Please,
 don't call us directly, just send your resume for review. We promise to reply to ALL emails. Thanks!
