--- a/_posts/contacts/2014-08-08-order.md
+++ b/_posts/contacts/2014-08-08-order.md
@@ -8,7 +8,7 @@ intro: "Give us your requirements and get a ROM Estimate for your project, today
 description: no description
 keywords:
   - software development
-next: about
+next_step: about
 ---
 
 Contact us to get a quotation for your software project. The process is simple:
