--- a/_posts/contacts/2014-08-08-sup.md
+++ b/_posts/contacts/2014-08-08-sup.md
@@ -8,7 +8,7 @@ intro: "Let us know about your skills and experience and we will involve you int
 description: no description
 keywords:
   - software development
-next: process
+next_step: process
 ---
 
 We're always looking for new talents and skills.
