--- a/_posts/de/2014-08-08-contacts.md
+++ b/_posts/de/2014-08-08-contacts.md
@@ -15,15 +15,15 @@ keywords:
   - agile softwareentwicklung
   - softwareentwicklung
   - java softwareentwicklung
-next: de/quality
+next_step: de/quality
 ---
 
-Am bequemsten ist es, Kontakte per E-mail auszutauschen und sich anschließend zu Gesprächen zu 
+Am bequemsten ist es, Kontakte per E-mail auszutauschen und sich anschließend zu Gesprächen zu
 treffen: [email](mailto:sales@technoparkcorp.com)
 
-Wahrscheinlich arbeiten Sie schon mit Auftragnehmern oder hatten bereits Arbeitserfahrungen mit 
-entfernt arbeitenden Teams. Möglicherweise ist diese Erfahrung negativ. Wir werden Ihnen 
-vorschlagen, wie es am besten ist, die Arbeit mit uns aufzubauen, damit die Projekte für Sie und uns 
+Wahrscheinlich arbeiten Sie schon mit Auftragnehmern oder hatten bereits Arbeitserfahrungen mit
+entfernt arbeitenden Teams. Möglicherweise ist diese Erfahrung negativ. Wir werden Ihnen
+vorschlagen, wie es am besten ist, die Arbeit mit uns aufzubauen, damit die Projekte für Sie und uns
 erfolgreich sind.
 
 Naples, Florida tel. +1 (239) 935 5429
