--- a/_posts/innovations/2014-08-08-metrics.md
+++ b/_posts/innovations/2014-08-08-metrics.md
@@ -23,12 +23,12 @@ keywords:
   - custom software development
   - static code analysis
   - distributed team
-next: innovations/risk-game
+next_step: innovations/risk-game
 ---
 
-The problem explained here is very common for distributed teams, where the product is created for , 
-not for the team itself. Being a customer in such a project, how do you monitor and control the 
-without programming skills? If the answer is "I trust my programmers" you may suffer from some of 
+The problem explained here is very common for distributed teams, where the product is created for ,
+not for the team itself. Being a customer in such a project, how do you monitor and control the
+without programming skills? If the answer is "I trust my programmers" you may suffer from some of
 the following problems:
 
 <ol>
@@ -43,49 +43,49 @@ the following problems:
         <li>You feel that if you want to get higher quality-of-code you have to change programmers.</li>
     </ol>
 
-These problems occur in many projects where the quality-of-code is not controlled and is not 
-managed. A common assumption is that good programmers produce good code and if you want to improve 
-the code you should hire better programmers. This assumption is wrong. Quality-of-code in your 
+These problems occur in many projects where the quality-of-code is not controlled and is not
+managed. A common assumption is that good programmers produce good code and if you want to improve
+the code you should hire better programmers. This assumption is wrong. Quality-of-code in your
 product has to be controlled by you and now we will show you how to accomplish this.
 
 <h2>What are your objectives?</h2>
 
-Programmers (coders, testers, analysts) are technical specialists whose motivation is based on . 
-Either you recognize them as "gurus" or their colleagues give them respect for their knowledge or 
-experience, it is better if they receive both. Unfortunately, in most cases money is not the first 
+Programmers (coders, testers, analysts) are technical specialists whose motivation is based on .
+Either you recognize them as "gurus" or their colleagues give them respect for their knowledge or
+experience, it is better if they receive both. Unfortunately, in most cases money is not the first
 priority for them.
 
-In order to earn and retain the status of "guru" a programmer has to do something that no one else 
-can do. He or she must know the tricks in your software. After all, the more complex the software is 
+In order to earn and retain the status of "guru" a programmer has to do something that no one else
+can do. He or she must know the tricks in your software. After all, the more complex the software is
 the higher their salary will be.
 
-However, your objectives are different. Your business value is , and you want to invest into it, not 
-into programmers. You want to control it and you want to know that the product really belongs to 
+However, your objectives are different. Your business value is , and you want to invest into it, not
+into programmers. You want to control it and you want to know that the product really belongs to
 you, not to the people who know the tricks.
 
-As you see, your objectives and your coders' objectives are not aligned, in other words you work 
+As you see, your objectives and your coders' objectives are not aligned, in other words you work
 against each other.
 
 <h2>Quality-of-code could be measured</h2>
 
-To align objectives and start sharing common goals, it is necessary to invent a that will represent 
-your objective and at the same time will impact the programmers' motivation. The higher the metric, 
-the better the quality-of-code will be. At the same time, the benefits for programmers will be 
+To align objectives and start sharing common goals, it is necessary to invent a that will represent
+your objective and at the same time will impact the programmers' motivation. The higher the metric,
+the better the quality-of-code will be. At the same time, the benefits for programmers will be
 higher, like salary and recognition.
 
-We use two metrics: [Code Coverage](http://en.wikipedia.org/wiki/Code\_coverage) and [Cyclomatic 
-Complexity](http://en.wikipedia.org/wiki/Cyclomatic\_complexity). Each of them are calculated 
+We use two metrics: [Code Coverage](http://en.wikipedia.org/wiki/Code\_coverage) and [Cyclomatic
+Complexity](http://en.wikipedia.org/wiki/Cyclomatic\_complexity). Each of them are calculated
 automatically at each round of [continuous integration](http://en.wikipedia.org/wiki/Continuous\_Integration).
 
-tells you that the code is clear and simple and could be easily understood by new programmers (This 
-means no more "tricks"). Cyclomatic complexity is one of the most important [software 
+tells you that the code is clear and simple and could be easily understood by new programmers (This
+means no more "tricks"). Cyclomatic complexity is one of the most important [software
 metrics](http://en.wikipedia.org/wiki/Software\_metric) used in [static code analysis](http://en.wikipedia.org/wiki/Static\_code\_analysis).
 
-tells you that for each block of code there exists a [unit 
-test](http://en.wikipedia.org/wiki/Unit\_testing) that validates it. The biggest benefit of unit 
+tells you that for each block of code there exists a [unit
+test](http://en.wikipedia.org/wiki/Unit\_testing) that validates it. The biggest benefit of unit
 tests is that once the code is tested it stays workable when its author forgets how it works.
 
-In our management panel you get a graph that indicates current value of the metric and a history of 
+In our management panel you get a graph that indicates current value of the metric and a history of
 change, like you see in the sample below:
 
 <tikz>
@@ -115,14 +115,14 @@ change, like you see in the sample below:
 \end{tikzpicture}
         </tikz>
 
-This graph is available for you and your coders. It is instantly updated by our software according 
+This graph is available for you and your coders. It is instantly updated by our software according
 to the source code from SVN repository.
 
 <h2>How we do this technically</h2>
 
-There are five components of the whole process: [SVN](http://subversion.tigris.org), 
-[Continuum](http://continuum.apache.org), [Maven2](http://maven.apache.org), Gist and thePanel. 
-Coders as usualy commit their changes to SVN, and you monitor quality-of-code in our online project 
+There are five components of the whole process: [SVN](http://subversion.tigris.org),
+[Continuum](http://continuum.apache.org), [Maven2](http://maven.apache.org), Gist and thePanel.
+Coders as usualy commit their changes to SVN, and you monitor quality-of-code in our online project
 management system (thePanel):
 
 <tikz>
@@ -162,7 +162,7 @@ management system (thePanel):
 \end{tikzpicture}
         </tikz>
 
-The cycle is repeated every day and is initiated by Continuum, an open-source continuous integration 
+The cycle is repeated every day and is initiated by Continuum, an open-source continuous integration
 software by [Apache Group](http://www.apache.org):
 
 <ol>
@@ -176,12 +176,12 @@ software by [Apache Group](http://www.apache.org):
             <li>You get the quality-of-code instantly</li>
         </ol>
 
-This process is absolutely transparent for you and the coders. Everything below the dotted red line 
-in the diagram above is not visible to anyone. Coders commit changes to SVN together with unit tests 
+This process is absolutely transparent for you and the coders. Everything below the dotted red line
+in the diagram above is not visible to anyone. Coders commit changes to SVN together with unit tests
 and get feedback in form of bonuses. You monitor the values of metrics.
 
-We use our own simple cyclomatic complexity calculator based on [Thomas 
-McCabe's](http://www.mccabe.com) principles. Code coverage is calculated by 
+We use our own simple cyclomatic complexity calculator based on [Thomas
+McCabe's](http://www.mccabe.com) principles. Code coverage is calculated by
 [JUnit](http://www.junit.org), [xdebug](http://www.phpunit.de">phpUnit
 
 <a href="http://www.xdebug.org)),             [NUnit](http://www.nunit.org) or             [CPPUnit](http://cppunit.sourceforge.net)."/>
