--- a/_posts/innovations/2014-08-08-pdd.md
+++ b/_posts/innovations/2014-08-08-pdd.md
@@ -19,11 +19,11 @@ keywords:
   - branching
   - version control
   - branches in version control
-next: innovations/test-planning
+next_step: innovations/test-planning
 ---
 
 The innovation is pending patent in United States
-        Patent and Trademark Office (USPTO), patent application 
+        Patent and Trademark Office (USPTO), patent application
         \textbf{no. 12/840,306}.
 
         Distributed software development is rapidly becoming the norm for
@@ -36,17 +36,17 @@ The innovation is pending patent in United States
         discussions take place outside of the tool in e-mails,
         chats or phone calls.
 
-        Consider an example where a programmer was assigned 
+        Consider an example where a programmer was assigned
         to implement a new software function. He created a new
         separate version control ``branch'', and
         was aware of ``continuous integration'' principle
         advocated in the project. The implementation was planned to take
         a few days, but he faced a few problems
-        and raised a number of questions during development. Once his questions 
-        were answered and the branch was ready for 
+        and raised a number of questions during development. Once his questions
+        were answered and the branch was ready for
         integration with the main stream, he realized that
         the main stream received a number of important changes.
-        Synchronization of the branch with the main stream took some time, 
+        Synchronization of the branch with the main stream took some time,
         and produced new questions and problems. After a number of
         such synchronization iterations, the branch was considered as out-dated
         and was closed.
@@ -59,7 +59,7 @@ The innovation is pending patent in United States
             \item closing the branch after the first problem or question, in order to minimize time and cost losses; or
             \item pausing the branch and hoping for the best.
             \end{inparaenum}
-        None of these workarounds really solve the problem.  
+        None of these workarounds really solve the problem.
         However, a solution is needed because its absence can effectively
         ruin the development of an enterprise project, especially if the team
         is remotely distributed.
@@ -76,7 +76,7 @@ The innovation is pending patent in United States
     	he implements a temporary solution that keeps the code compilable.
     	He marks the place in the code with \texttt{@todo} tag (called ``puzzle'') and merges
     	the branch into \texttt{trunk}. The ``puzzle''
-    	includes the identifier of a task he was working with. As long as the 
+    	includes the identifier of a task he was working with. As long as the
     	``puzzle'' stays in source code, a project manager considers the task as
     	incomplete and pending resolution. The project manager assigns ``puzzle'' resolution
     	to other team members. When all ``puzzles'' are resolved, the project manager
@@ -174,22 +174,22 @@ The innovation is pending patent in United States
     	repository. While the programmer was waiting for the answer, the repository received
     	two changes from other team members, in revisions \texttt{3} and \texttt{4}. Thus, the programmer
     	commits his changes in revision \texttt{5}. Now, the feature is almost finished and only one final
-    	change has to be done before returning it back to the \texttt{trunk}. The programmer 
+    	change has to be done before returning it back to the \texttt{trunk}. The programmer
     	makes that change and commits it to the repository, in revision \texttt{7}. The project manager
-    	is notified about the finished feature and merges the branch into the \texttt{trunk} 
+    	is notified about the finished feature and merges the branch into the \texttt{trunk}
     	in \texttt{9}. Revisions \texttt{7} and \texttt{8} were committed to the repository by other
     	project team members. The distance between merging the branch into
     	the \texttt{trunk} and starting the branch is 7 revisions.
 
     	To the contrary, \textbf{Workflow A} looks differently: The repository is in revision \texttt{1}
     	and the programmer makes her first changes in \texttt{2} (similar to Workflow B). Now the
-    	programmer understands the necessity of additional information and refers to the 
+    	programmer understands the necessity of additional information and refers to the
     	project manager. The programmer makes the branch ready for merging into \texttt{trunk}
     	by means of ``stubs'' and properly commented places, which are not implemented yet. The
     	project manager merges the branch into \texttt{trunk} in revision \texttt{5} (the distance
     	is 2 revisions and the risk of conflict is much lower than in Workflow B). The project
     	manager decides who is going to resolve the question asked by the programmer, finds the
-    	right person, assigns this problem to him and waits for the answer. The answer 
+    	right person, assigns this problem to him and waits for the answer. The answer
     	comes in a new branch, revision \texttt{7}, where the architect (author of the answer) makes comment
     	right inside the source code. This branch immediately goes into \texttt{trunk}, in revision \texttt{8}.
     	The project manager returns the task back to the programmer and asks him to finish the task,
@@ -197,7 +197,7 @@ The innovation is pending patent in United States
     	branch and implements the code she could not implement before. The programmer makes
     	changes in revision \texttt{9} and the project manager merges them into \texttt{trunk} in \texttt{11}.
     	The longest distance is 2 revisions and the risk of conflict during merging is much smaller
-    	than in Workflow B. 
+    	than in Workflow B.
 
     	It is obvious that a long-lasting branch (as in Workflow B) will cause higher
     	risks of conflicts during merging into the \texttt{trunk}. With shorter branches,
