--- a/_posts/process/2014-08-08-cost.md
+++ b/_posts/process/2014-08-08-cost.md
@@ -20,12 +20,12 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: about/why
+next_step: about/why
 ---
 
-We do projects in fixed-price contracts, meaning that the price is defined according to 
-[scope](/process/scope) definition and is not changed unless there are changes to 
-[Specification](/process/scope/specification). We take all risks of cost overrun so that you pay 
+We do projects in fixed-price contracts, meaning that the price is defined according to
+[scope](/process/scope) definition and is not changed unless there are changes to
+[Specification](/process/scope/specification). We take all risks of cost overrun so that you pay
 only the price defined in project [Budget](/process/cost/budget).
 
 Our two-step quotation process has a number of important advantages:
@@ -35,7 +35,7 @@ Our two-step quotation process has a number of important advantages:
  * Avoids cost overrun
  * Guarantees project success
 
-We calculate and communicate all project costs in staff-hours. Actual monetary size of project is a 
+We calculate and communicate all project costs in staff-hours. Actual monetary size of project is a
 multiple of staff-hours and [price per hour](/process/cost/prices).
 
 Cost is estimated in two steps:
@@ -45,21 +45,21 @@ Cost is estimated in two steps:
         <li>Budget</li>
     </ol>
 
-The ROM Estimate is provided to you in response to your informal request and is based on the 
-[Vision](/process/scope/vision) document. ROM Estimate gives a range (low and high boundary) of the 
-expected Budget. You approve the range and the project team performs 
-[requirements](/process/scope/requirement) gathering and analysis during the [Inception 
+The ROM Estimate is provided to you in response to your informal request and is based on the
+[Vision](/process/scope/vision) document. ROM Estimate gives a range (low and high boundary) of the
+expected Budget. You approve the range and the project team performs
+[requirements](/process/scope/requirement) gathering and analysis during the [Inception
 Phase](/process/scope/inception). These steps result in the creation of a [SRS](/process/scope/srs) document.
 
-When the SRS is ready and you approved it, the project team estimates project Budget as an exact 
-amount of staff-hours. The Budget can only be within the range provided in ROM Estimate. Upon your 
+When the SRS is ready and you approved it, the project team estimates project Budget as an exact
+amount of staff-hours. The Budget can only be within the range provided in ROM Estimate. Upon your
 approval of the Budget, the project continues.
 
-If you don't approve the Budget for any reason, you pay only the Retainer, which covers the efforts 
+If you don't approve the Budget for any reason, you pay only the Retainer, which covers the efforts
 for Requirements gathering and Specification development.
 
-[Payments](/process/cost/model) are made according to Milestones defined in the 
+[Payments](/process/cost/model) are made according to Milestones defined in the
 [Schedule](/process/time/schedule), which is approved together with the Budget.
 
-Budget covers all costs, including programming, requirements analysis, management, project 
+Budget covers all costs, including programming, requirements analysis, management, project
 management, architecture and design, testing and quality assurance.
