--- a/_posts/process/2014-08-08-quality.md
+++ b/_posts/process/2014-08-08-quality.md
@@ -15,25 +15,25 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/cost
+next_step: process/cost
 ---
 
-Quality is the degree of conformance of [Deliverables](/process/warranty/deliverables) to 
-[Specification](/process/scope/specification). The goal of a project is to deliver software products 
-with an acceptable level of Quality on time. Acceptable, according to our software development 
+Quality is the degree of conformance of [Deliverables](/process/warranty/deliverables) to
+[Specification](/process/scope/specification). The goal of a project is to deliver software products
+with an acceptable level of Quality on time. Acceptable, according to our software development
 contract, means that Quality is 95% or greater.
 
-Defects in software decrease the level of Quality and shall be removed by the project team. We take 
+Defects in software decrease the level of Quality and shall be removed by the project team. We take
 preventive actions to minimize Defects. Revealed Defects are removed during project lifecycle.
 
-An estimated number of Defects are planned when a project is started and is based on the amount of 
-Functional Requirements. Testers work with the software product until the estimated number of 
+An estimated number of Defects are planned when a project is started and is based on the amount of
+Functional Requirements. Testers work with the software product until the estimated number of
 Defects are found. This gives us confidence that software is delivered without critical hidden Defects.
 
-Any type of software has an unlimited number of Defects. Some of these are critical and some are 
-minor. In the iterative and [incremental](/process/communication/incremental) delivery process we 
-use to find the planned amount of Defects, we provide an optimal service in the limited amount of 
+Any type of software has an unlimited number of Defects. Some of these are critical and some are
+minor. In the iterative and [incremental](/process/communication/incremental) delivery process we
+use to find the planned amount of Defects, we provide an optimal service in the limited amount of
 [time](/process/time) given. Regardless, all critical Defects are to be found and removed.
 
-Defects are tracked in a Defects Tracking System, which you have an access to. During the whole 
+Defects are tracked in a Defects Tracking System, which you have an access to. During the whole
 project lifecycle you may view Defects and add their own records to this database.
