--- a/_posts/process/2014-08-08-risk.md
+++ b/_posts/process/2014-08-08-risk.md
@@ -22,13 +22,13 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/communication
+next_step: process/communication
 ---
 
 A Risk is a possible event that may impact the outcome of a project.
 
-All Risks are identified during the [Inception Phase](/process/time/inception) and a [Risk 
-List](/process/risk/risklist) is developed which includes mitigations and contingencies plans for 
+All Risks are identified during the [Inception Phase](/process/time/inception) and a [Risk
+List](/process/risk/risklist) is developed which includes mitigations and contingencies plans for
 each Risk. Usually, a Risk List identifies up to 20 areas of concern.
 
 <tikz>
@@ -54,8 +54,8 @@ each Risk. Usually, a Risk List identifies up to 20 areas of concern.
 \end{tikzpicture}
     </tikz>
 
-You select a strategy for addressing each Risk and the [Scope](/process/scope), 
+You select a strategy for addressing each Risk and the [Scope](/process/scope),
 [Cost](/process/cost), and [Schedule](/process/time/schedule) are adapted according to Risk response plans.
 
-Besides this formal procedure of Risk Strategies acceptance we conduct a full-scale risk management 
+Besides this formal procedure of Risk Strategies acceptance we conduct a full-scale risk management
 in each [Iteration](/process/time/iteration), including risk identification, analysis, and response planning.
