--- a/_posts/process/2014-08-08-scope.md
+++ b/_posts/process/2014-08-08-scope.md
@@ -26,26 +26,26 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/risk
+next_step: process/risk
 ---
 
-Boundaries of software products are defined by a set of [Requirements](/process/scope/requirement). 
-The software development team designs, implements, tests, and delivers these Requirements to you. A 
-Requirement is an atomic unit of a software product from the viewpoint of the user. As a rule, 
-Requirements are always correct, unambiguous, verifiable, and traceable. Requirements are numbered 
+Boundaries of software products are defined by a set of [Requirements](/process/scope/requirement).
+The software development team designs, implements, tests, and delivers these Requirements to you. A
+Requirement is an atomic unit of a software product from the viewpoint of the user. As a rule,
+Requirements are always correct, unambiguous, verifiable, and traceable. Requirements are numbered
 and prioritized.
 
-High-level user Requirements are called [Features](/process/scope/feature). Up to 10 Features can be 
-defined in any software project, regardless of the project size. Features are defined in the 
-[Vision](/process/scope/vision) document. The Vision is created before the project commences, and is 
+High-level user Requirements are called [Features](/process/scope/feature). Up to 10 Features can be
+defined in any software project, regardless of the project size. Features are defined in the
+[Vision](/process/scope/vision) document. The Vision is created before the project commences, and is
 the basis for the [ROM Estimate](/process/cost/rom).
 
-The Vision is developed right after you submit an informal request. Up to 5 hours are spent for 
+The Vision is developed right after you submit an informal request. Up to 5 hours are spent for
 developing the Vision by a system analyst, regardless of the project size.
 
-When a ROM Estimate is approved, an Alpha-Specification is created. Upon your approval, the 
-Alpha-Specification becomes a Beta-Specification. When the project begins and the 
-[Budget](/process/cost/budget) is approved (following a [LCO Milestone](/process/time/lco)), the 
+When a ROM Estimate is approved, an Alpha-Specification is created. Upon your approval, the
+Alpha-Specification becomes a Beta-Specification. When the project begins and the
+[Budget](/process/cost/budget) is approved (following a [LCO Milestone](/process/time/lco)), the
 Beta-Specification becomes an effective [Specification](/process/scope/specification).
 
 <tikz>
@@ -70,15 +70,15 @@ Beta-Specification becomes an effective [Specification](/process/scope/specifica
 \end{tikzpicture}
     </tikz>
 
-A fully-dressed Specification is called a [SRS](/process/scope/srs) (Software Requirements 
+A fully-dressed Specification is called a [SRS](/process/scope/srs) (Software Requirements
 Specification) and is compliant with 'Recommended Practices for Software Requirements Specifications'.
 
-The SRS includes a [Glossary](/process/scope/glossary), , Functional Requirements, and 
+The SRS includes a [Glossary](/process/scope/glossary), , Functional Requirements, and
 Non-Functional Requirements.
 
-All Functional Requirements are then listed in a requirements attributes spreadsheet, where all 
+All Functional Requirements are then listed in a requirements attributes spreadsheet, where all
 necessary attributes for each Requirement are maintained.
 
-Changes to the project scope can be made only by issuing new Specifications through a process called 
-[Change Requests](/process/scope/changerequest). Each Change Request implies that changes will be 
+Changes to the project scope can be made only by issuing new Specifications through a process called
+[Change Requests](/process/scope/changerequest). Each Change Request implies that changes will be
 made to the Budget, [Schedule](/process/time/schedule), and [Risks](/process/risk).
