--- a/_posts/process/2014-08-08-time.md
+++ b/_posts/process/2014-08-08-time.md
@@ -22,28 +22,28 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/cost
+next_step: process/cost
 ---
 
-Talented and motivated engineers, programmers, designers and architects may fail to complete a 
-project and miss important milestones if they don't have a project manager who manages time 
-properly. Nowadays in the software industry this happens during the course of many projects. We pay 
+Talented and motivated engineers, programmers, designers and architects may fail to complete a
+project and miss important milestones if they don't have a project manager who manages time
+properly. Nowadays in the software industry this happens during the course of many projects. We pay
 great attention to planning, monitoring, and controlling of time in our projects.
 
-Right after a [ROM Estimate](/process/cost/rom) is approved and the project is started, we plan the 
-[Inception Phase](/process/time/inception). Usually, when the project is started, there is a lack of 
-details about system requirements. Accurate planning can be done only after the scope definition and 
-risk analysis are completed, that's why we need to conduct the Inception Phase before 
+Right after a [ROM Estimate](/process/cost/rom) is approved and the project is started, we plan the
+[Inception Phase](/process/time/inception). Usually, when the project is started, there is a lack of
+details about system requirements. Accurate planning can be done only after the scope definition and
+risk analysis are completed, that's why we need to conduct the Inception Phase before
 [Schedule](/process/time/schedule) development.
 
-The main goal of our Inception Phase is to create [Specification](/process/scope/specification), 
-identify [Risks](/process/risks), calculate [Budget](/process/cost/budget), and build a Schedule. 
-Sometimes, in order to define the Schedule, it's necessary to develop a baseline of key 
+The main goal of our Inception Phase is to create [Specification](/process/scope/specification),
+identify [Risks](/process/risks), calculate [Budget](/process/cost/budget), and build a Schedule.
+Sometimes, in order to define the Schedule, it's necessary to develop a baseline of key
 architectural software concepts during the Inception Phase.
 
-[LCO Milestone](/process/time/lco) happens following the end of Inception Phase, when the 
-Specification is ready and a Schedule is defined. The Schedule is a one-page table that lists the 
-[Iterations](/process/time/iteration) and Milestones. As soon as the customer signs the Schedule, it 
+[LCO Milestone](/process/time/lco) happens following the end of Inception Phase, when the
+Specification is ready and a Schedule is defined. The Schedule is a one-page table that lists the
+[Iterations](/process/time/iteration) and Milestones. As soon as the customer signs the Schedule, it
 obtains the status of a contractual provision and can't be missed.
 
 <tikz>
@@ -82,17 +82,17 @@ obtains the status of a contractual provision and can't be missed.
 \end{tikzpicture}
     </tikz>
 
-The objective of each Iteration is to implement, test, and deliver a certain part of the product 
-functionality. Iteration normally takes 8-12 working days and starts with a fine-grained Iteration 
+The objective of each Iteration is to implement, test, and deliver a certain part of the product
+functionality. Iteration normally takes 8-12 working days and starts with a fine-grained Iteration
 Plan, which is shown to you and is used to track the progress during the project.
 
-The Iteration Plan is focused on the Iteration objective as defined in the Schedule, and uses the 
+The Iteration Plan is focused on the Iteration objective as defined in the Schedule, and uses the
 WBS and Network Diagram methods for planning.
 
-By the end of each Iteration, we conduct an Iteration Acceptance Meeting, where a 
-[SPI](/process/time/spi) is presented to you in conjunction with the risk monitoring results. The 
-project is transparently monitored and tracked with an SPI, which is based on the functional 
+By the end of each Iteration, we conduct an Iteration Acceptance Meeting, where a
+[SPI](/process/time/spi) is presented to you in conjunction with the risk monitoring results. The
+project is transparently monitored and tracked with an SPI, which is based on the functional
 requirements and their status of completion.
 
-Any changes to the Milestones will produce a new version of the Schedule, which you shall sign to 
+Any changes to the Milestones will produce a new version of the Schedule, which you shall sign to
 make it effective.
