--- a/_posts/process/2014-08-08-warranty.md
+++ b/_posts/process/2014-08-08-warranty.md
@@ -15,10 +15,10 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/cost
+next_step: process/cost
 ---
 
-As stated in our software development contract, a software project is closed when 
+As stated in our software development contract, a software project is closed when
 [Quality](/process/quality) is acceptable. That means that 95% of functional [SRS](/process/scope/requirement}">Requirements
 
 <a href="${url:process/scope/srs) do not     have any [Defects](/process/quality/defect)."/>
