--- a/_posts/process/communication/2014-08-08-iam.md
+++ b/_posts/process/communication/2014-08-08-iam.md
@@ -14,15 +14,15 @@ keywords:
   - requirements acceptance
   - iteration acceptance meeting
   - RUP iteration acceptance
-next: process/time
+next_step: process/time
 ---
 
-[Incremental delivery](/process/communication/incremental) means that a software product is created, 
-[tested](/process/quality) and delivered to you in a number of builds. Each build has a new portion 
+[Incremental delivery](/process/communication/incremental) means that a software product is created,
+[tested](/process/quality) and delivered to you in a number of builds. Each build has a new portion
 of functionality. A new build is delivered by the end of each [Iteration](/process/time/iteration).
 
-The Iteration Acceptance Meeting is an online meeting (20-40 minutes) where the project manager 
-presents Iteration results and explains them. You review the results, and confirm what new 
+The Iteration Acceptance Meeting is an online meeting (20-40 minutes) where the project manager
+presents Iteration results and explains them. You review the results, and confirm what new
 functionality was accepted during Iteration (and what was not).
 
 Typical agenda of Iteration Acceptance Meeting:
