--- a/_posts/process/cost/2014-08-08-model.md
+++ b/_posts/process/cost/2014-08-08-model.md
@@ -8,16 +8,16 @@ title: "In-time Payments Guarantee In-time Deliveries"
 intro: "Learn how a project is paid, in what portions, and on what dates"
 description: |
 keywords:
-  - 
-next: process/time/schedule
+  -
+next_step: process/time/schedule
 ---
 
-Payments are done according to an approved [Schedule](/process/time/schedule). Each payment is 
-connected to a certain Milestone, and is paid when all of the acceptance criteria is met by the 
+Payments are done according to an approved [Schedule](/process/time/schedule). Each payment is
+connected to a certain Milestone, and is paid when all of the acceptance criteria is met by the
 project team.
 
-What is important for the project is to keep total amount of payments received higher than actual 
-project cost, as total amount of staff-hours paid for task executors. This diagram shows the dynamic 
+What is important for the project is to keep total amount of payments received higher than actual
+project cost, as total amount of staff-hours paid for task executors. This diagram shows the dynamic
 nature of project payments:
 
 <tikz>
@@ -84,8 +84,8 @@ nature of project payments:
 \end{tikzpicture}
     </tikz>
 
-You will make payments (P, P, P and P) in order to cover actual cost of the project, but strictly 
+You will make payments (P, P, P and P) in order to cover actual cost of the project, but strictly
 according to the approved Schedule document with a list of Milestones (M, M, and M)
 
-We accept different payment options: cashier checks, wire transfers to US bank account, credit cards 
+We accept different payment options: cashier checks, wire transfers to US bank account, credit cards
 ([Visa](http://www.visa.com), [MasterCard](http://www.mastercard.com), [AmEx](http://www.americanexpress.com)).
