--- a/_posts/process/cost/2014-08-08-prices.md
+++ b/_posts/process/cost/2014-08-08-prices.md
@@ -15,14 +15,14 @@ keywords:
   - budget
   - project price
   - software development price
-next: process/quality/coq
+next_step: process/quality/coq
 ---
 
-We only work with fixed-price contracts. Staff-hours are used to calculate the price. The 
+We only work with fixed-price contracts. Staff-hours are used to calculate the price. The
 [Budget](/process/cost/budget) is the amount of required staff-hours multiplied by the price of one staff-hour.
 
-The price per staff-hour includes direct expenses, indirect expenses, and our profit. Depending on 
-the size of the project and cost of technical specialists' efforts price per hour may vary in 
+The price per staff-hour includes direct expenses, indirect expenses, and our profit. Depending on
+the size of the project and cost of technical specialists' efforts price per hour may vary in
 interval between $25 and $60.
 
 Direct expenses include:
@@ -41,5 +41,5 @@ Indirect expenses include:
  * Mistakes in estimates that may result in project cost overrun;
  * Management reserve.
 
-You approve a Budget as the fixed amount of staff-hours and monetary value required to complete the 
+You approve a Budget as the fixed amount of staff-hours and monetary value required to complete the
 project. The Budget is never changed if scope of the work is not changed.
