--- a/_posts/process/cost/2014-08-08-rom.md
+++ b/_posts/process/cost/2014-08-08-rom.md
@@ -18,17 +18,17 @@ keywords:
   - cost estimation
   - project size estimation
   - project budget
-next: stories
+next_step: stories
 ---
 
-When a project is started and Requirements are not specified in great detail, the exact project 
-[Budget](/process/cost/budget) can not be calculated without mistakes (due to the well-known [Cone 
-of Uncertainty](http://www.construx.com/Page.aspx?hid=1648)). Concrete numbers in this stage will 
+When a project is started and Requirements are not specified in great detail, the exact project
+[Budget](/process/cost/budget) can not be calculated without mistakes (due to the well-known [Cone
+of Uncertainty](http://www.construx.com/Page.aspx?hid=1648)). Concrete numbers in this stage will
 lead to an ineffective situation in which you or us may experience loss.
 
-To avoid the possibility of such an ineffective situation, we provide a Rough Order-of-Magnitude 
-(ROM) Estimate of costs and time when Requirements are not specified in the early stages of the 
-project. The ROM Estimate is based on [Vision](/process/scope/vision) document that includes a list 
+To avoid the possibility of such an ineffective situation, we provide a Rough Order-of-Magnitude
+(ROM) Estimate of costs and time when Requirements are not specified in the early stages of the
+project. The ROM Estimate is based on [Vision](/process/scope/vision) document that includes a list
 of [Features](/process/scope/feature).
 
 The ROM Estimate includes the following project parameters which are the foundation for estimation:
@@ -83,13 +83,13 @@ The ROM Estimate includes the following project parameters which are the foundat
 
     </table>
 
-In order to calculate the numbers above, we use our own patent-pending estimation method, that is 
-based on [COCOMO-II Software Cost Estimation Technology](http://sunset.usc.edu/research/COCOMOII/), 
-[PERT (Program Evaluation and Review 
+In order to calculate the numbers above, we use our own patent-pending estimation method, that is
+based on [COCOMO-II Software Cost Estimation Technology](http://sunset.usc.edu/research/COCOMOII/),
+[PERT (Program Evaluation and Review
 Technique)](http://en.wikipedia.org/wiki/Program\_Evaluation\_and\_Review\_Technique) and [Wideband Delphi](http://en.wikipedia.org/wiki/Wideband\_delphi).
 
 Completion of the ROM Estimate takes up to 48 hours.
 
-Projects smaller than 1500 staff-hours and larger than 5,000 staff-hours are not subject to ROM 
-Estimation. When Specification is defined and project scope is baselined, we use our innovative 
+Projects smaller than 1500 staff-hours and larger than 5,000 staff-hours are not subject to ROM
+Estimation. When Specification is defined and project scope is baselined, we use our innovative
 method for project cost estimating called "[Scope Champions](/innovations/scope-champions)".
