--- a/_posts/process/ipr/2014-08-08-law.md
+++ b/_posts/process/ipr/2014-08-08-law.md
@@ -8,8 +8,8 @@ title: "Works Made For Hire"
 intro: "Read about U.S. Copyright Laws and our conformance to it"
 description: |
 keywords:
-  - 
-next: process/cost
+  -
+next_step: process/cost
 ---
 
 Prior to beginning a project, a software development contract is signed between us stating:
@@ -21,8 +21,8 @@ Copyright Law of the United States of America
 (edition of June 2003)
 </pre>
 
-Reference to [Copyright Law of the United States of America](http://www.copyright.gov/title17/) 
-means that [Deliverables](/process/warranty/deliverables) created for you by TPC are "Works Made For 
+Reference to [Copyright Law of the United States of America](http://www.copyright.gov/title17/)
+means that [Deliverables](/process/warranty/deliverables) created for you by TPC are "Works Made For
 Hire" as defined in the Law:
 
 <pre>
@@ -36,6 +36,6 @@ signed by them, owns all of the rights comprised
 in the copyright.
 </pre>
 
-Thus, Deliverables and the Intellectual Propery Rights (IPR) for them are transferred to you when 
-the project is closed, plus the Acceptance Statement is signed and the final 
+Thus, Deliverables and the Intellectual Propery Rights (IPR) for them are transferred to you when
+the project is closed, plus the Acceptance Statement is signed and the final
 [payment](/process/cost/model) is processed.
