--- a/_posts/process/ipr/2014-08-08-license.md
+++ b/_posts/process/ipr/2014-08-08-license.md
@@ -8,8 +8,8 @@ title: "Software License Agreement"
 intro: "Read full text of Software License Agreement"
 description: |
 keywords:
-  - 
-next: process/ipr
+  -
+next_step: process/ipr
 ---
 
 Under construction
