--- a/_posts/process/ipr/2014-08-08-security.md
+++ b/_posts/process/ipr/2014-08-08-security.md
@@ -8,15 +8,15 @@ title: "Methods Of Information Protection"
 intro: "Read more about our methods of information security management, ISO compliant"
 description: |
 keywords:
-  - 
-next: process/quality
+  -
+next_step: process/quality
 ---
 
-"Information is an asset that, like other important business assets, is essential to an 
-organization's business and consequently needs to be suitably protected. This is especially 
-important in the increasingly interconnected business environment. As a result of this increasing 
-interconnectivity, information is now exposed to a growing number and a wider variety of threats and 
-vulnerabilities," states ISO/IEC 17799-2005 "Information Technology, Security Techniques, Code of 
+"Information is an asset that, like other important business assets, is essential to an
+organization's business and consequently needs to be suitably protected. This is especially
+important in the increasingly interconnected business environment. As a result of this increasing
+interconnectivity, information is now exposed to a growing number and a wider variety of threats and
+vulnerabilities," states ISO/IEC 17799-2005 "Information Technology, Security Techniques, Code of
 Practice for Information Security Management".
 
 As the standard defines, we protect information by means of:
@@ -33,6 +33,6 @@ As the standard defines, we protect information by means of:
  * Cryptographic controls
  * Proactive incident management
 
-Information we receive from our customers and data created during a project are labeled and stored 
-in authorization-required databases and file systems. User access to such information is granted 
+Information we receive from our customers and data created during a project are labeled and stored
+in authorization-required databases and file systems. User access to such information is granted
 only by our director.
