--- a/_posts/process/quality/2014-08-08-coq.md
+++ b/_posts/process/quality/2014-08-08-coq.md
@@ -8,20 +8,20 @@ title: "How Much We Pay For Quality"
 intro: "Learn how much quality effects the total Budget"
 description: |
 keywords:
-  - 
-next: process/cost/budget
+  -
+next_step: process/cost/budget
 ---
 
-[Quality](/process/quality) is what costs us money and what you pay for. Quality is measured as 
-amount of defect-free functionality related to defective functionality. Quality is measured in 
+[Quality](/process/quality) is what costs us money and what you pay for. Quality is measured as
+amount of defect-free functionality related to defective functionality. Quality is measured in
 percentages. Our contract says that 95% is acceptable Quality.
 
-A [Defect](/process/quality/defect) is a non-conformity of 
-[Deliverables](/process/warranty/deliverables) to [Specification](/process/scope/specification). In 
-other words, the software product does not work as specified. Defects shall be revealed by the 
+A [Defect](/process/quality/defect) is a non-conformity of
+[Deliverables](/process/warranty/deliverables) to [Specification](/process/scope/specification). In
+other words, the software product does not work as specified. Defects shall be revealed by the
 project team before software product is delivered to you.
 
-While you and end-users perceive Defects through software interfaces, the majority of Defects do not 
+While you and end-users perceive Defects through software interfaces, the majority of Defects do not
 reside in software itself. This is where Defects normally lie (in order of severity):
 
 <ol>
