--- a/_posts/process/quality/2014-08-08-manual.md
+++ b/_posts/process/quality/2014-08-08-manual.md
@@ -8,11 +8,11 @@ title: "Manual Testing"
 intro: "Learn more about manual testing methods used in our projects"
 description: |
 keywords:
-  - 
-next: process/quality/unit
+  -
+next_step: process/quality/unit
 ---
 
-Manual testing is done by testers through performing operations that will later be done by 
+Manual testing is done by testers through performing operations that will later be done by
 end-users. This type of testing is necessary to simulate normal and stress modes of operations.
 
 Manual testing includes:
