--- a/_posts/process/quality/2014-08-08-system.md
+++ b/_posts/process/quality/2014-08-08-system.md
@@ -8,11 +8,11 @@ title: "System Testing"
 intro: "Learn more about system testing utilized in our projects"
 description: |
 keywords:
-  - 
-next: process/quality/manual
+  -
+next_step: process/quality/manual
 ---
 
-System testing is performed by testers through special tools and testability elements in order to 
+System testing is performed by testers through special tools and testability elements in order to
 reveal system [Defects](/process/quality/defect).
 
 System testing includes:
