--- a/_posts/process/quality/2014-08-08-unit.md
+++ b/_posts/process/quality/2014-08-08-unit.md
@@ -8,16 +8,16 @@ title: "Test Driven Development"
 intro: "Learn more about Test Driven Development (TDD) that we advocate in our agile projects"
 description: |
 keywords:
-  - 
-next: process/quality
+  -
+next_step: process/quality
 ---
 
-Unit testing means that software includes special modules in automatic mode test, other modules, and 
-components. Unit tests play an adhesive role between software modules and 
-[Requirements](/process/scope/requirement). Unit tests guarantee that in any moment all software 
+Unit testing means that software includes special modules in automatic mode test, other modules, and
+components. Unit tests play an adhesive role between software modules and
+[Requirements](/process/scope/requirement). Unit tests guarantee that in any moment all software
 modules work as they worked before, when the unit tests were created and executed.
 
-We exploit this powerful technology in all projects, no matter what platform or programming language 
+We exploit this powerful technology in all projects, no matter what platform or programming language
 is used. Unit testing gives a number of benefits to you:
 
  * Software is self-verifiable
@@ -25,5 +25,5 @@ is used. Unit testing gives a number of benefits to you:
  * Code is stable and predictable
  * Software is scalable and supportable
 
-While the technology is very useful for any project, it requires additional time for design and 
+While the technology is very useful for any project, it requires additional time for design and
 development during early [Iterations](/process/time/iteration).
