--- a/_posts/process/risk/2014-08-08-risk.md
+++ b/_posts/process/risk/2014-08-08-risk.md
@@ -22,7 +22,7 @@ keywords:
   - risk source
   - risk effect
   - risk cause
-next: process/risk/risklist
+next_step: process/risk/risklist
 ---
 
 A Risk in software development project is an event that may have an impact on the outcome of the
