--- a/_posts/process/risk/2014-08-08-risklist.md
+++ b/_posts/process/risk/2014-08-08-risklist.md
@@ -18,18 +18,18 @@ keywords:
   - risk response plan
   - risk strategy
   - risk mitigation plan
-next: process/risk/strategy
+next_step: process/risk/strategy
 ---
 
-A Risk List is created by the project manager during the [Inception Phase](/process/time/inception) 
+A Risk List is created by the project manager during the [Inception Phase](/process/time/inception)
 and presented to you prior to a [LCO Milestone](/process/time/lco).
 
-The project team participate in the process of identifying possible Risks, and assist the project 
-manager in answering the question, 'what could go wrong?'. A Risk List may include hundreds of 
-Risks, but a maximum of 20 are presented to you for [Risk Strategies](/process/risk/strategy) 
+The project team participate in the process of identifying possible Risks, and assist the project
+manager in answering the question, 'what could go wrong?'. A Risk List may include hundreds of
+Risks, but a maximum of 20 are presented to you for [Risk Strategies](/process/risk/strategy)
 selection and Risk response plans approval.
 
-You are responsible for choosing which Risk Strategy you wish to implement for each Risk. The 
+You are responsible for choosing which Risk Strategy you wish to implement for each Risk. The
 following is an example of a Risk List:
 
 <table>
@@ -56,10 +56,10 @@ following is an example of a Risk List:
         </tr>
     </table>
 
-The Mitigation plan is what actions will be taken in advance to remove Risk responsibility from you. 
+The Mitigation plan is what actions will be taken in advance to remove Risk responsibility from you.
 The Contingency Plan is what shall be done when the Risk occurs.
 
-When a Risk List is presented, you select a Risk Strategy for each item listed. You can choose to 
+When a Risk List is presented, you select a Risk Strategy for each item listed. You can choose to
 accept the Risk, or select to implement the Mitigation Plan. For example:
 
 <table>
@@ -84,7 +84,7 @@ accept the Risk, or select to implement the Mitigation Plan. For example:
         for 500+ staff-hours for the development of a custom video compressing module</td></tr>
     </table>
 
-If you accept the Risk, it means that you agree to take full responsibility for it. If the Risk 
+If you accept the Risk, it means that you agree to take full responsibility for it. If the Risk
 happens, the Contingency Plan will be implemented, resulting in an extension of the project [Specification](/process/time/schedule}">Schedule
 
 <a href="${url:process/scope/specification),     and [Budget](/process/cost/budget).     In the example above, the customer has chosen to accept RISK2.  As a result, the customer may have to pay     for an additional 220 hours in the event that the Risk takes place, as detailed in the Contingency Plan.     "/>
