--- a/_posts/process/risk/2014-08-08-strategy.md
+++ b/_posts/process/risk/2014-08-08-strategy.md
@@ -8,8 +8,8 @@ title: "Who Is Responsible For Risk Consequencies"
 intro: "Learn more about possible Risk response strategies"
 description: |
 keywords:
-  - 
-next: process/risk/risk
+  -
+next_step: process/risk/risk
 ---
 
 [Risk List](/process/risk/risk}">Risks
