--- a/_posts/process/scope/2014-08-08-feature.md
+++ b/_posts/process/scope/2014-08-08-feature.md
@@ -19,11 +19,11 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/scope/glossary
+next_step: process/scope/glossary
 ---
 
-A system boundary is defined by [Requirements](/process/scope/requirement). A Feature is a type of 
-high-level user Requirement that explains what the user wants to do with the system in order to 
+A system boundary is defined by [Requirements](/process/scope/requirement). A Feature is a type of
+high-level user Requirement that explains what the user wants to do with the system in order to
 satisfy their needs.
 
 A Feature describes what the user can do with the system. Features are listed in the [Vision](/process/scope/vision).
@@ -42,8 +42,8 @@ Examples of Features include:
         <tr><td>FEAT3</td><td>Affiliate can access system database reports via XML, obtain the latest user data or statistics, and payout reports.</td></tr>
     </table>
 
-The key difference between a Feature and a Functional Requirement is that the Feature is a 
-non-formal statement. A Feature resembles a wide and uncertain definition of functionality, while a 
+The key difference between a Feature and a Functional Requirement is that the Feature is a
+non-formal statement. A Feature resembles a wide and uncertain definition of functionality, while a
 Functional Requirement resembles a strict and unambiguous formula.
 
 Each Functional Requirement is traced back to a Feature in the [Traceability Matrix](/process/scope/matrix).
