--- a/_posts/process/scope/2014-08-08-glossary.md
+++ b/_posts/process/scope/2014-08-08-glossary.md
@@ -19,14 +19,14 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/scope/vision
+next_step: process/scope/vision
 ---
 
-There are hundreds of [Requirements](/process/scope/requirement) in mid-size and small software 
-products. All Requirements are defined in a textual format based on the terms from the Glossary. A 
+There are hundreds of [Requirements](/process/scope/requirement) in mid-size and small software
+products. All Requirements are defined in a textual format based on the terms from the Glossary. A
 Glossary is used in order to avoid misinterpretation of key terms and definitions inside the [Specification](/process/scope/specification).
 
-Key terms, data units, and concepts are taken from Requirements and entered in the Glossary. This is 
+Key terms, data units, and concepts are taken from Requirements and entered in the Glossary. This is
 a proven method to avoid ambiguity.
 
 Consider the following example of two simple functional requirements:
@@ -67,8 +67,8 @@ The following is an example of the Glossary terms for the Requirements shown abo
         <td>R1, R2</td></tr>
     </table>
 
-As evidenced by the example, the Glossary helps to define shared concepts of the system scope and 
+As evidenced by the example, the Glossary helps to define shared concepts of the system scope and
 work with it independently of the Requirements.
 
-A Glossary is created for all projects, regardless of the project size. The Glossary is a section of 
+A Glossary is created for all projects, regardless of the project size. The Glossary is a section of
 the [SRS](/process/scope/srs).
