--- a/_posts/process/scope/2014-08-08-matrix.md
+++ b/_posts/process/scope/2014-08-08-matrix.md
@@ -18,15 +18,15 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/cost/budget
+next_step: process/cost/budget
 ---
 
-As soon as Functional [Requirements](/process/scope/requirement) are specified in the 
-[SRS](/process/scope/srs) and you approved them, they are listed in a Traceability Matrix. Design 
-Elements, [Risks](/process/risk/risk), [Features](/process/scope/feature), and test cases are traced 
+As soon as Functional [Requirements](/process/scope/requirement) are specified in the
+[SRS](/process/scope/srs) and you approved them, they are listed in a Traceability Matrix. Design
+Elements, [Risks](/process/risk/risk), [Features](/process/scope/feature), and test cases are traced
 to Functional Requirements and vise versa.
 
-Bi-directional traceability between key elements of project scope (artifacts) gives a number of 
+Bi-directional traceability between key elements of project scope (artifacts) gives a number of
 benefits to the project:
 
  * Synchronization of different roles efforts
