--- a/_posts/process/scope/2014-08-08-srs.md
+++ b/_posts/process/scope/2014-08-08-srs.md
@@ -19,17 +19,17 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/cost
+next_step: process/cost
 ---
 
-A Software Requirements Specification (SRS) document is one of the central artifacts in the course 
-of a software development project. It defines what shall be developed in great detail. The SRS is a 
+A Software Requirements Specification (SRS) document is one of the central artifacts in the course
+of a software development project. It defines what shall be developed in great detail. The SRS is a
 rather technical document and usualy requires your significant attention to read and understand it.
 
-The SRS is a format of the [Specification](/process/scope/specification). The SRS is based on the 
+The SRS is a format of the [Specification](/process/scope/specification). The SRS is based on the
 [Vision](/process/scope/vision) and provides details for each [Feature](/process/scope/feature) from it.
 
-The SRS is created by a system analyst according to details provided by the requirements specifier 
+The SRS is created by a system analyst according to details provided by the requirements specifier
 (your representative). The SRS includes four sections:
 
  * [Glossary](/process/scope/glossary)
@@ -37,11 +37,11 @@ The SRS is created by a system analyst according to details provided by the requ
  * Functional [Requirements](/process/scope/requirement)
  * Non-Functional Requirements
 
-'Recommended Practices for Software Requirements Specifications' is used to structure, define and 
+'Recommended Practices for Software Requirements Specifications' is used to structure, define and
 maintain the SRS.
 
-The amount of effort contributed to SRS development and maintenance depends on the project size and 
-complexity. However, average numbers (in correlation with the project 
+The amount of effort contributed to SRS development and maintenance depends on the project size and
+complexity. However, average numbers (in correlation with the project
 [Budget](/process/cost/budget)) are as follows:
 
 <table>
@@ -57,5 +57,5 @@ complexity. However, average numbers (in correlation with the project
         <tr><td>3000-5000</td><td>350-700</td><td>80-200</td><td>350-700</td><td>5-9</td></tr>
     </table>
 
-Functional Requirements for the SRS are uniquely identified and used in a [Traceability 
+Functional Requirements for the SRS are uniquely identified and used in a [Traceability
 Matrix](/process/scope/matrix) in order to provide backward traceability for Features.
