--- a/_posts/process/scope/2014-08-08-vision.md
+++ b/_posts/process/scope/2014-08-08-vision.md
@@ -19,20 +19,20 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/scope/feature
+next_step: process/scope/feature
 ---
 
-Each customer has their own understanding of task definition. Customers also use their own format 
-for documentation. Sometimes, such documentation is properly formatted and presented, and sometimes 
-it is not. We use a uniform and standard format for the preliminary scope definition. It is short, 
+Each customer has their own understanding of task definition. Customers also use their own format
+for documentation. Sometimes, such documentation is properly formatted and presented, and sometimes
+it is not. We use a uniform and standard format for the preliminary scope definition. It is short,
 simple, and very clear - we call it the Vision.
 
-The Vision document is a two page file that includes a description of the project, list of 
-[Features](/process/scope/feature), key risks, assumptions, and architectural concepts. It is 
+The Vision document is a two page file that includes a description of the project, list of
+[Features](/process/scope/feature), key risks, assumptions, and architectural concepts. It is
 possible to present any product scope in this simple format, even if the product is very large.
 
-The Vision document is not a fully-dressed [Specification](/process/scope/specification) and cannot 
-be used by developers for the purpose of programming. The Vision is used by the system analyst, 
+The Vision document is not a fully-dressed [Specification](/process/scope/specification) and cannot
+be used by developers for the purpose of programming. The Vision is used by the system analyst,
 project manager, customer, and other stakeholders for the following reasons:
 
 <anchor name="list">
