--- a/_posts/process/time/2014-08-08-lco.md
+++ b/_posts/process/time/2014-08-08-lco.md
@@ -21,10 +21,10 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/time/schedule
+next_step: process/time/schedule
 ---
 
-The Lifecycle Objectives (LCO) Milestone is a moment when the 
+The Lifecycle Objectives (LCO) Milestone is a moment when the
 [Specification](/process/scope/specification), [Schedule](/process/cost/budget}">Budget,
 
 <a href="${url:process/time/schedule) are ready     and presented to you for approval."/>
