--- a/_posts/process/time/2014-08-08-schedule.md
+++ b/_posts/process/time/2014-08-08-schedule.md
@@ -29,22 +29,22 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/time/spi
+next_step: process/time/spi
 ---
 
-The Schedule is a coarse-grained project scenario, which splits the whole project into 
-[Iterations](/process/time/iteration). Each Iteration delivers a certain product functionality. The 
+The Schedule is a coarse-grained project scenario, which splits the whole project into
+[Iterations](/process/time/iteration). Each Iteration delivers a certain product functionality. The
 Schedule is created during the [Inception Phase](/process/time/inception) and is approved on an [LCO Milestone](/process/time/lco).
 
-The Schedule is kept current during the whole project. By having this document, you know when and 
+The Schedule is kept current during the whole project. By having this document, you know when and
 what results or functions to expect.
 
-The Schedule is created by the project manager, right after you approve the 
-[Specification](/process/scope/specification). Together, all Iterations cover the whole project 
-scope as defined in the Specification. Overall, the Schedule is a central document in the project 
+The Schedule is created by the project manager, right after you approve the
+[Specification](/process/scope/specification). Together, all Iterations cover the whole project
+scope as defined in the Specification. Overall, the Schedule is a central document in the project
 [time management](/process/time).
 
-We utilize the best practices of [Rational Unified Process (RUP)](http://www.ibm.com/rational) for 
+We utilize the best practices of [Rational Unified Process (RUP)](http://www.ibm.com/rational) for
 the product lifecycle. Thus, the key mandatory Milestones in each project are:
 
  * Lifecycle Objective (LCO) Milestone
@@ -52,7 +52,7 @@ the product lifecycle. Thus, the key mandatory Milestones in each project are:
  * Initial Operational Capability (IOC) Milestone
  * Release Milestone
 
-The Schedule is developed by the project manager in our online management system and you approve it 
+The Schedule is developed by the project manager in our online management system and you approve it
 with one click. The project moves on only when the Schedule had been approved.
 
 This is an example of a Schedule:
@@ -77,6 +77,6 @@ This is an example of a Schedule:
         <tr><td>M4</td><td>Project finished (Release Milestone)</td><td>3-Apr</td><td/></tr>
     </table>
 
-The Schedule is tracked with a [Schedule Performance Index (SPI)](/process/time/spi), which shows 
-you and the project team what progress has been made. The SPI is presented to you on each Iteration 
+The Schedule is tracked with a [Schedule Performance Index (SPI)](/process/time/spi), which shows
+you and the project team what progress has been made. The SPI is presented to you on each Iteration
 Acceptance Meeting.
