--- a/_posts/process/warranty/2014-08-08-support.md
+++ b/_posts/process/warranty/2014-08-08-support.md
@@ -12,11 +12,11 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/quality
+next_step: process/quality
 ---
 
-This following is a list of services that we DO NOT provide, but are usually required for web 
-projects and software systems. We recommend considering other companies to get quality services of 
+This following is a list of services that we DO NOT provide, but are usually required for web
+projects and software systems. We recommend considering other companies to get quality services of
 this kind:
 
  * Server Configuration
