--- a/_posts/about/2014-08-08-jobs.md
+++ b/_posts/about/2014-08-08-jobs.md
@@ -17,14 +17,14 @@ keywords:
   - PHP Jobs
   - C++ Jobs
   - Remote programming jobs
-next: about/facts
+next_step: about/facts
 ---
 
-There are a number of full-time positions available in our team. Please apply online if you have 
+There are a number of full-time positions available in our team. Please apply online if you have
 necessary skills and experience.
 
- * 
-            
+ *
+
  * .
             PMP, SCEA, UML, and RUP certifications are mandatory.
             10+ years of business development. 5+ years
@@ -32,19 +32,19 @@ necessary skills and experience.
             Strong leadership skills.
             Permission to work in the United States.
             [more...](/about/jobs/CEO)
-        
- * 
-            
+
+ *
+
  * .
             PMP certification is mandatory. 5+ years of project management
             of software development projects. Distributed development
             experience. Permission to work in the United States.
             [more...](/about/jobs/PM)
-        
 
-Apply online with your personal information and short message and our HR Director will get back to 
-you with an offer. You may join our team on a full-time or [part-time basis](/about/teams). If you 
-work [part-time](/about/teams) we pay you by bank transfer or cashier check, no matter what country 
+
+Apply online with your personal information and short message and our HR Director will get back to
+you with an offer. You may join our team on a full-time or [part-time basis](/about/teams). If you
+work [part-time](/about/teams) we pay you by bank transfer or cashier check, no matter what country
 you are from. We need your talent!
 
 [HR Director](mailto:hr@technoparkcorp.com) is available by email.
