--- a/_posts/about/2014-08-08-sitemap.md
+++ b/_posts/about/2014-08-08-sitemap.md
@@ -8,8 +8,8 @@ intro: "Review full map of our site and reach your desired point"
 description: no description
 keywords:
   - software development
-next: about/news
+next_step: about/news
 ---
 
-This site is constantly changing and updating. Bookmark it for your convenience. Find your desired 
+This site is constantly changing and updating. Bookmark it for your convenience. Find your desired
 point in the following site map:
