--- a/_posts/process/2014-08-08-ipr.md
+++ b/_posts/process/2014-08-08-ipr.md
@@ -12,21 +12,21 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/ipr/security
+next_step: process/ipr/security
 ---
 
-Software development is very tightly connected with intellectual property that is created, managed, 
-and transferred during project execution. We pay serious attention to such property, whether it is 
+Software development is very tightly connected with intellectual property that is created, managed,
+and transferred during project execution. We pay serious attention to such property, whether it is
 owned by you or by us.
 
-A [Non-Disclosure Agreement (NDA)](/process/ipr/nda) is signed prior to any communication on the 
-software project. The NDA states that any confidential information disclosed by you is to be 
+A [Non-Disclosure Agreement (NDA)](/process/ipr/nda) is signed prior to any communication on the
+software project. The NDA states that any confidential information disclosed by you is to be
 protected and we have no rights of republishing or redistributing any such information.
 
-Software development contracts limit our ability to transfer or disclose intellectual property 
-created during project execution. We are incorporated in the United States and work according to 
-[Copyright Law of the United States of America](http://www.copyright.gov/title17/) - our services 
+Software development contracts limit our ability to transfer or disclose intellectual property
+created during project execution. We are incorporated in the United States and work according to
+[Copyright Law of the United States of America](http://www.copyright.gov/title17/) - our services
 are titled in the contract as ["work made for hire"](/process/ipr/law).
 
-We protect Confidential Information in our offices and servers by means of a strict internal 
+We protect Confidential Information in our offices and servers by means of a strict internal
 [Information Security Policy](/process/ipr/security) designed in compliance with ISO 27001.
