--- a/_posts/process/quality/2014-08-08-defect.md
+++ b/_posts/process/quality/2014-08-08-defect.md
@@ -8,12 +8,12 @@ title: "Defect Reporting And Tracking"
 intro: "Learn more about our agile approach to defect tracking"
 description: |
 keywords:
-  - 
-next: process/quality
+  -
+next_step: process/quality
 ---
 
-A Defect is a non-conformance of [Deliverables](/process/warranty/deliverables) to 
-[Specification](/process/scope/specification). Defects can be found by testers, project team members 
+A Defect is a non-conformance of [Deliverables](/process/warranty/deliverables) to
+[Specification](/process/scope/specification). Defects can be found by testers, project team members
 or you. No matter who identifies a Defect, it has to be removed.
 
 Defects are stored in Defect Tracking System. Every customer will have access to this online system.
@@ -39,7 +39,7 @@ Date:     8-Jul
 
 Properly reported Defects are easy to track, monitor and remove.
 
-For each [Iteration](/process/time/iteration) we plan certain amount of Defects that may be found, 
-and testers perform all necessary procedures to prepare for that amount of Defects. Test Plan is 
-created by a test analyst at the beginning of each Iteration in the form of guidance for testers. 
+For each [Iteration](/process/time/iteration) we plan certain amount of Defects that may be found,
+and testers perform all necessary procedures to prepare for that amount of Defects. Test Plan is
+created by a test analyst at the beginning of each Iteration in the form of guidance for testers.
 Test Plan leads testers through product functionality and helps them to reveal the most critical Defects.
