--- a/_posts/process/time/2014-08-08-spi.md
+++ b/_posts/process/time/2014-08-08-spi.md
@@ -18,23 +18,23 @@ keywords:
   - software outsourcing
   - offshore development
   - distributed programming
-next: process/time/iteration
+next_step: process/time/iteration
 ---
 
-[Earned Value Analysis](http://en.wikipedia.org/wiki/Earned\_value\_management) is a method of 
-tracking the status of a project. It is based on numeric parameters and provides a transparent and 
-un-biased snapshot of the project situation. [The Schedule](/process/time/schedule) is tracked by 
+[Earned Value Analysis](http://en.wikipedia.org/wiki/Earned\_value\_management) is a method of
+tracking the status of a project. It is based on numeric parameters and provides a transparent and
+un-biased snapshot of the project situation. [The Schedule](/process/time/schedule) is tracked by
 means of Earned Value (EV) and Planned Value (PV) parameters.
 
-EV is calculated as the total amount of required planned staff-hours for those requirements that you 
+EV is calculated as the total amount of required planned staff-hours for those requirements that you
 already accepted.
 
-PV is calculated as a piece of the project [Budget](/process/cost/budget). The amount is shown in 
-staff-hours that were planned to be spent by today (staff-hours are divided evenly across the 
+PV is calculated as a piece of the project [Budget](/process/cost/budget). The amount is shown in
+staff-hours that were planned to be spent by today (staff-hours are divided evenly across the
 completed requirements.)
 
-Consider the following example, we have 5 requirements, today is the 25th day of the project. The 
-total Budget is 615 staff-hours, and total project duration is 40 days (this is a snapshot of 
+Consider the following example, we have 5 requirements, today is the 25th day of the project. The
+total Budget is 615 staff-hours, and total project duration is 40 days (this is a snapshot of
 requirements attributes table):
 
 <table>
@@ -51,31 +51,31 @@ requirements attributes table):
         <tr><td>R5</td><td>Admin can filter users</td><td>90</td><td>specified</td></tr>
     </table>
 
-EV is the sum of 145, 80 and 120 staff-hours (all of the requirements that are accepted so far). EV 
+EV is the sum of 145, 80 and 120 staff-hours (all of the requirements that are accepted so far). EV
 is equal to 345 staff-hours.
 
-PV is the result of 25/40 days that have been put into the project (0.625), and then multiplied by 
-615 staff-hours. PV equals to approximately 384 staff-hours. According to the plan, we have to 
+PV is the result of 25/40 days that have been put into the project (0.625), and then multiplied by
+615 staff-hours. PV equals to approximately 384 staff-hours. According to the plan, we have to
 deliver 384 accepted staff-hours to the customer on the 25th day of the project.
 
-SPI is calculated as EV/PV and equals to 345/384 = 0.898. That means that the project is behind 
+SPI is calculated as EV/PV and equals to 345/384 = 0.898. That means that the project is behind
 schedule now and corrective actions are required.
 
-This example shows how the project can be tracked without excess technical details. This information 
-(EV, PV and SPI) is presented to you at each Iteration Acceptance Meeting (by the end of each 
+This example shows how the project can be tracked without excess technical details. This information
+(EV, PV and SPI) is presented to you at each Iteration Acceptance Meeting (by the end of each
 [Iteration](/process/time/iteration)) and is available instantly online in our management software.
 
-The SPI should always be equal to or greater than 1.0. This is a key aspect for the project manager. 
-If an SPI is less than 1.0, the project manager immediately impelements corrective action, which 
+The SPI should always be equal to or greater than 1.0. This is a key aspect for the project manager.
+If an SPI is less than 1.0, the project manager immediately impelements corrective action, which
 could be one of the following (depending on other project characteristics):
 
  * Add more resources
  * Change the scope by moving requirements to the next release
  * Re-estimate the project and approve a new Schedule and Budget (worst variant)
 
-The numbers presented by an Earned Value analysis help you, the project team, and project manager to 
+The numbers presented by an Earned Value analysis help you, the project team, and project manager to
 stay on the same page during the course of the whole project.
 
-Earned Value data is not meaningful during the [Inception Phase](/process/time/inception), when 
-[Specification](/process/scope/specification) is not yet approved. Following the [LCO 
+Earned Value data is not meaningful during the [Inception Phase](/process/time/inception), when
+[Specification](/process/scope/specification) is not yet approved. Following the [LCO
 Milestone](/process/time/lco) is consensus, the project manager will start to calculate the SPI.
